@@ -232,6 +232,8 @@
                                     </li>
                                     <li class="sep"><a data-toggle="tab" href="#master-codes"><i class="fa fa-list-ul"></i> Master Codes</a>
                                     </li>
+                                    <li class="sep"><a data-toggle="tab" href="#notes"><i class="fa fa-sticky-note"></i> Notes</a>
+                                    </li>
                                 </ul>
                             </div>
 
@@ -534,6 +536,114 @@
                                         </nav>
                                     </div>
                                 </div>
+
+                                <div id="notes" class="tab-pane fade in tabs-info">
+
+
+                                <button id="" name="" data-toggle="modal" data-target="#add-notes" class="btn carrier-btn pull-right btn-table"> <i class="fa fa-plus"></i> Add Notes</button>
+
+                                <div class="portal-tables">
+                                    <table class="table-hover table-striped table-condensed cf no-border">
+                                        <thead class="cf">
+                                            <tr>
+                                                <th>Created</th>
+                                                <th class="col-lg-4">Note</th>
+                                                <th>Created By</th>
+                                                <th>Modified By</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr>
+                                                <td data-title="Created">5/24/2017</td>
+                                                <td data-title="Note">Added new agency.</td>
+                                                <td data-title="Created By">Jane Austeen</td>
+                                                <td data-title="Modified By">Chloe Williams</td>
+                                            </tr>
+
+                                            <tr>
+                                                <td data-title="Created">5/21/2017</td>
+                                                <td data-title="Note">Changed the active master code.</td>
+                                                <td data-title="Created By">John Hanson</td>
+                                                <td data-title="Modified By">Chloe Williams</td>
+                                            </tr>
+
+                                            <tr>
+                                                <td data-title="Created">5/4/2017</td>
+                                                <td data-title="Note">Added master code lbm1201.</td>
+                                                <td data-title="Created By">Michael Dillon</td>
+                                                <td data-title="Modified By">Chloe Williams</td>
+                                            </tr>
+
+                                            <tr>
+                                                <td data-title="Created">2/1/2017</td>
+                                                <td data-title="Note">Removed line of business. <i class="fa fa-flag red"></i> </td>
+                                                <td data-title="Created By">Jason Lacroix</td>
+                                                <td data-title="Modified By">Chloe Williams</td>
+                                            </tr>
+
+                                            <tr>
+                                                <td data-title="Created">1/25/2017</td>
+                                                <td data-title="Note">Checked profit sharing.</td>
+                                                <td data-title="Created By">Carl Combs</td>
+                                                <td data-title="Modified By">Chloe Williams</td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+
+                                <div class="text-center">
+                                    <nav aria-label="Page navigation">
+                                        <ul class="pagination">
+                                            <li>
+                                                <a href="#" aria-label="Previous">
+                                                    <span aria-hidden="true">«</span>
+                                                </a>
+                                            </li>
+                                            <li class="active"><a href="#">1</a>
+                                            </li>
+                                            <li><a href="#">2</a>
+                                            </li>
+                                            <li>
+                                                <a href="#" aria-label="Next">
+                                                    <span aria-hidden="true">»</span>
+                                                </a>
+                                            </li>
+                                        </ul>
+                                    </nav>
+                                </div>
+                                </div>
+
+				                <!-- Edit Modal -->
+				                <div id="add-notes" class="modal fade" role="dialog">
+				                    <div class="modal-dialog">
+
+				                        <!-- Modal content-->
+				                        <div class="modal-content">
+				                            <div class="modal-header">
+				                                <button type="button" class="close" data-dismiss="modal">&times;</button>
+				                                <h4 class="modal-title">Add Note </h4>
+				                            </div>
+				                            <div class="modal-body">
+
+				                                <label class="sr-only control-label" for="">Note:</label>
+				                                <textarea class="form-control" maxlength="4000" spellcheck="true" rows="11" cols="20" placeholder="Please enter note (maximum of 4000 characters)" id=""></textarea>
+
+				                                <i class="fa fa-flag red"></i>
+				                                <label class="control-label" for="flag">Flag:</label>
+				                                <label for="checkbox">
+				                                    <input name="checkbox" id="checkbox-sample" value="1" type="checkbox">
+				                                </label>
+				                            </div>
+
+				                            <div class="modal-footer">
+				                                <button id="save" name="save" class="btn btn-primary">Save</button>
+				                                <button id="cancel" name="cancel" class="btn btn-default" data-dismiss="modal">Cancel</button>
+				                            </div>
+				                        </div>
+				                    </div>
+				                </div>
+				                <!-- Modal -->
+
                             </div>
                         </div>
                     </div>
